test/errors/error15.vult

fun foo() {
   val x : real = 1;
}
